# cmakedemo

./: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md  mbed-os.lib  requirements.txt
.github/workflows/: main.yaml
include/: blink.hpp
src/: CMakeLists.txt  blink.cpp  main.cpp
